// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Accordion Initialized 1`] = `
<div
  className="accordion-item"
>
  <div
    className="AccordianTitle"
  >
    <div
      className="FeatureAccordionHeader"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          USERS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={22}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="toggle"
      onClick={[Function]}
    >
      <span
        className="UpCaret"
      />
    </div>
  </div>
</div>
`;

exports[`Accordion Accordion Toggle 1`] = `
<div
  className="accordion-item"
>
  <div
    className="AccordianTitle"
  >
    <div
      className="FeatureAccordionHeader"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          USERS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={22}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="toggle"
      onClick={[Function]}
    >
      <span
        className="DownCaret"
      />
    </div>
  </div>
  <div
    className="AccordionContent"
  >
    <div
      className="FeatureAccordionHeader"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          USERS - Add
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={221}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="FeatureAccordionHeader"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          USERS - Edit
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={222}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="FeatureAccordionHeader"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          USERS - Delete
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={223}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="FeatureAccordionHeader"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          Max USERS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <select
          className="Select"
          onChange={[Function]}
          value={5}
        >
          <option
            value={5}
          >
            5
          </option>
          <option
            value={10}
          >
            10
          </option>
          <option
            value={20}
          >
            20
          </option>
          <option
            value={50}
          >
            50
          </option>
        </select>
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={224}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
